src/test/compile-fail/issue-2370.rs
// error-pattern: type cat cannot be dereferenced
struct cat { new() {} }

fn main() {
  let nyan = cat();
  log (error, *nyan);
}